# python-template

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
